apps/harbor/kustomization/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    gateway-access: private
