apps/harbor/kustomization/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-private
  namespace: harbor
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: traefik
    sectionName: websecure-reg
  hostnames:
  - reg.yiannis.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/
    - path:
        type: PathPrefix
        value: /service/
    - path:
        type: PathPrefix
        value: /v2/
    - path:
        type: PathPrefix
        value: /c/
    backendRefs:
    - group: ""
      kind: Service
      name: harbor-core
      port: 80
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: harbor-portal
      port: 80
      weight: 1
